fixed genre not showing properly

--- a/styles.css
+++ b/styles.css
@@ -38,8 +38,8 @@ nav {
 
 nav ul {
 	list-style-type: none;
-  padding-left: 0;
-  margin: 0 0 0 10px;
+  	padding-left: 0;
+  	margin: 0 0 0 10px;
 }
 
 nav ul li {
@@ -54,6 +54,10 @@ nav ul a {
 
 nav ul a:hover {
 	text-decoration: underline;
+}
+
+nav li.active a {
+	font-weight: 500;
 }
 
 b {
@@ -187,17 +191,12 @@ table {
 	box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.1);
 }
 
-td {
+th, td {
 	border: 1px solid #E6E6E6;
 }
 
-th, tfoot td {
-	border: 1px solid #999999;
-}
-
 thead, tfoot {
-	background-image: linear-gradient(to right, #1471ff, #3c6aff, #5763ff, #6d59ff, #824eff);
-	color: #FFFFFF;
+	color: #333333;
 }
 
 thead th, tfoot td {
@@ -357,7 +356,6 @@ form input[type=text], form select {
 	height: 34px;
 	margin-bottom: 20px;
 	width: 200px;
-	border: 1px solid #BBBBBB;
 }
 
 form input[type=text] {
@@ -372,6 +370,18 @@ form textarea {
 	padding: 5px 7px;
 	border: 1px solid #BBBBBB;
 	margin-bottom: 20px;
+}
+
+form input, form select, form textarea {
+	background-color: #FFFFFF;
+	border: none;
+	border-bottom: 1px solid #BBBBBB;
+}
+
+form input:active, form select:active, form textarea:active,
+form input:focus, form select:focus, form textarea:focus {
+	border-bottom: 1px solid #4978ff;
+	outline: 0;
 }
 
 form input[type=submit] {
@@ -401,5 +411,16 @@ footer {
 	font-size: 14px;
 	color: #999999;
 	text-align: center;
-	margin-top: 30px;
+	margin-top: 50px;
+	margin-bottom: 30px;
+	line-height: 18px;
+}
+
+footer a {
+	color: #777777;
+	text-decoration: none;
+}
+
+footer a:hover {
+	color: #444444;
 }
